baml_language/crates/baml_tests/snapshots/diagnostic_errors/backtick_strict_types/baml_tests__diagnostic_errors__backtick_strict_types__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.case_a_null_interp() -> string  [expr] {
  { let x: int? = null } `...`
}
function user.case_e_optional_int_interp() -> string  [expr] {
  { let c = get_count() } `...`
}
function user.get_count() -> int?  [expr] {
  {  } 42
}
