baml_language/crates/baml_tests/snapshots/diagnostic_errors/backtick_strict_types/baml_tests__diagnostic_errors__backtick_strict_types__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] error: cannot interpolate a value of type `int | null` — it may be null; coalesce with `?? "…"` or unwrap it first
    ╭─[ main.baml:23:12 ]
    │
 23 │     `val: ${x}`
    │            ─┬─  
    │             ╰─── cannot interpolate a value of type `int | null` — it may be null; coalesce with `?? "…"` or unwrap it first
    │ 
    │ Note: Error code: E0001
────╯

  [type] error: cannot interpolate a value of type `int | null` — it may be null; coalesce with `?? "…"` or unwrap it first
    ╭─[ main.baml:34:14 ]
    │
 34 │     `count: ${c}`
    │              ─┬─  
    │               ╰─── cannot interpolate a value of type `int | null` — it may be null; coalesce with `?? "…"` or unwrap it first
    │ 
    │ Note: Error code: E0001
────╯
